--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 	<!DOCTYPE html>
 	<html>
 	<head>
-		<title>Hola Coursera</title>
+		<title>Hola Coursera, aprendiendo</title>
 	</head>
 	<body>
-	<h1>Hola Coursera</h1>
+	<h1>Hola Coursera, aprendiendo que viene</h1>
 	</body>
 	</html>
