--- a/gc_mod/index.html
+++ b/gc_mod/index.html
@@ -1,9 +1,12 @@
+<!doctype html>
 <html>
-    
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 
 </head>
 <body>
-    
+    <h1>Our Restaurant</h1>
 </body>
 </html>
