--- a/gc_mod/index.html
+++ b/gc_mod/index.html
@@ -9,6 +9,26 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Our Restaurant</h1>
+    <h1>Our Restaurant of Bolivian Food</h1>
+    <div>
+        <div>
+            <h2>Saltenas</h2>   
+            <P>
+                Una deliciosa empanada rellena de jigote
+            </P>
+        </div>
+        <div>
+            <h2>Sopa de Mani</h2>
+            <p>
+                Sopa compuesta de mani y Pollo
+            </p>
+        </div>
+        <div>
+            <h2>Majado</h2>
+            <P>
+                Arroz con huevoy charque
+            </P>
+        </div>
+    </div>
 </body>
 </html>
