--- a/gc_mod/index.html
+++ b/gc_mod/index.html
@@ -5,29 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Our Restaurant site</title>
+    <title>Our Restaurant of Bolivian Food</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Our Restaurant of Bolivian Food</h1>
-    <div>
-        <div>
-            <h2>Saltenas</h2>   
+    <div class="row">
+        <div class="col-lg-4 col-md-6">
+            <section>
+            <h2 class="h2pink">Salteña</h2>   
             <P>
-                Una deliciosa empanada rellena de jigote
+                A delicious dumplings filled with an original spice sauce and cooked potato, can contain meat, chicken or a mixture of both. There are also variations like pizza and Napolitan, which have ham and mozzarella cheese
             </P>
+            </section>
         </div>
-        <div>
-            <h2>Sopa de Mani</h2>
+        <div class="col-lg-4 col-md-6">
+            <section>
+            <h2 class="h2red">Sopa</h2>
             <p>
-                Sopa compuesta de mani y Pollo
+                Bolivian peanut soup was chosen as the typical dish of the country in recent years, in addition to containing special noodles, it may contain chicken or meat accompanied with a hot pepper.
             </p>
+            </section>
         </div>
-        <div>
-            <h2>Majado</h2>
+        <div class="col-lg-4 col-md-12">
+            <section>
+            <h2 class="h2yellow">Majado</h2>
             <P>
-                Arroz con huevoy charque
+                Cooked colored cooked rice mixed with dried meat or duck meat, additionally it has fried banana and fried egg. Traditional eastern Bolivian food
             </P>
+        </section>
         </div>
     </div>
 </body>
