--- a/gc_mod/index.html
+++ b/gc_mod/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Our Restaurant of Bolivian Food</title>
+    <title>My Restaurant of Bolivian Food</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Our Restaurant of Bolivian Food</h1>
+    <h1>My Restaurant of Bolivian Food</h1>
     <div class="row">
         <div class="col-lg-4 col-md-6">
             <section>
