--- a/gc_mod/index.html
+++ b/gc_mod/index.html
@@ -31,7 +31,7 @@
             <section>
             <h2 class="h2yellow">Majado</h2>
             <P>
-                Cooked colored cooked rice mixed with dried meat or duck meat, additionally it has fried banana and fried egg. Traditional eastern Bolivian food
+                Cooked colored cooked rice mixed with dried meat or duck meat, additionally it has fried banana and delicious fried egg. Traditional eastern Bolivian food
             </P>
         </section>
         </div>
